speedtest-tracker/speedtest-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-ingress
  namespace: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - speedtest-tracker.stone-lab.local
    secretName: speedtest-tracker-tls
  rules:
  - host: speedtest-tracker.stone-lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-tracker-service
            port:
              number: 8004
